# pyird

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  compile.sh  file_type_ird.py  irdreduc.py  make_list_ird.py  processRN.py  processRN2.py  process_RNe.cpp  setup.cfg  setup.py  show_header.py  test.py
.github/workflows/: draft-pdf.yml  main.yml
data/: channel_H.list  channel_YJ.list  ecapthars1_H_202008_fin  ecapthars1_YJ_202008_fin  ecapthars1_YJ_202008_init  ecapthars2_H_202008_fin  ecapthars2_YJ_202008_fin
documents/: conf.py  developers.rst  getting_started.rst  index.rst  input_data.rst  tutorials.rst  userguide.rst
documents/developers/: pytest.rst
documents/tutorials/: IRD_stream.ipynb  IRD_stream.rst  aptrace_flat_star.ipynb  check_1Dto2D.ipynb  check_1Dto2D.rst  getstarted.rst  jupyter2rst.py  other_outputs.rst  other_settings.ipynb  other_settings.rst  plot_spec.ipynb  plot_spec.rst  tutorial.rst
documents/userguide/: aptrace_flat_star.rst  backgrounds.rst  other_settings.rst  pattern.rst  terms.rst
examples/python/: IRD_stream.py  REACH.py  REACH_functions.py  REACH_stream.py  REACH_stream1D.py  bias_correction.py  check_1Dto2D.py  read_pattern_correction.py  reduc_thar.py
paper/: paper.bib  paper.md
pyird/: IRD_bias_sube.py  __init__.py  fitsset.py  irdstream.py
results/: README.md
samples/: fitsids_IRDBD.py  irdreduc.py~  irdreducH.py  irdreducYJ.py
samples/IRD_TWINS/: fitsids.py  irdreducH.py  irdreducYJ.py
scripts/: hdsis_ecf.cl
src/: nr_d.h  nrutil_d.c  nrutil_d.h
tests/: test_getinfo.py  test_version.py
(+127 files in other folders)
