[metadata]
name = pyird
version = attr: pyird.__version__
author = attr: pyird.__author__
author_email = attr: pyird.__email__
maintainer = attr: pyird.__author__
maintainer_email = attr: pyird.__email__
description = attr: pyird.__description__
long_description = file: README.md
long_description_content_type = text/x-rst
url = attr: pyird.__url__
license = attr: pyird.__license__
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:
package_dir =
    = src
include_package_data = true
zip_safe = false
install_requires =
    matplotlib
    tqdm
    scipy
    sep
    gpkron
    pandas
    astropy
    astroquery==0.4.7
    numpy<2

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
dev =
    pytest
    black

[options.entry_points]
console_scripts =
    pyird-cli = pyird.cli:main

[project]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "src.pyird.version"}

[tool.setuptools_scm]
write_to = 'src/pyird/pyird_version.py'

[bdist_wheel]
universal = 1
